[project]
name = "loss-adaptive-lr-scaling"
version = "0.1.0"
requires-python = ">=3.9"
description = "Reproducible experiments for Loss-Adaptive LR Scaling (LALS)"

[project.dependencies]
hydra-core = "^1.3.2"
wandb = "^0.16.1"
optuna = "^3.5.0"
transformers = "^4.37.0"
datasets = "^2.16.1"
peft = "^0.7.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.42.0"
torch = "^2.1.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pandas = "^2.1.4"
scipy = "^1.11.4"